--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -38,6 +38,12 @@
                 <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" ui-sref="data">Data</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" ui-sref="feedback">Feedback</a>
+                </li>
             </ul>
         </div>
     </div>
