--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,3 +1,11 @@
 <div class="container text-center">
-    <p>Copyright &copy; Your Website 2017</p>
+    <div class="container text-center">
+        <p class="font-weight-light">
+            <a href="http://abag.ca.gov">Copyright &copy; Association of Bay Area Governments</a> |
+            <a href="http:mtc.ca.gov">Metropolitan Transportation Commission</a> |
+            <a href="http://planbayarea.org">Plan Bay Area</a> |
+            <a href="https://gis.mtcanalytics.org">Site Built by MTC Data & Visualization Team</a> |
+            <a href="https://github.com/BayAreaMetro/projections/issues?state=open">Issues</a>
+        </p>
+    </div>
 </div>
