--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -208,7 +208,7 @@ a:hover {
 .masthead {
     display: table;
     width: 100%;
-    height: 85vh !important;
+    // height: 85vh !important;
     padding: 200px 0;
     text-align: center;
     color: white;
@@ -250,7 +250,7 @@ a:hover {
     font-size: 26px;
     width: 55px;
     height: 55px;
-    margin-top: 15px;
+    margin-bottom: 0px;
     line-height: 45px;
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
@@ -259,13 +259,12 @@ a:hover {
     border: 2px solid white;
     border-radius: 100% !important;
     background: #1B75BC;
-}
-
-.btn-circle:focus,
-.btn-circle:hover {
-    color: white;
-    outline: none;
-    background: rgba(255, 255, 255, 0.1);
+    &:focus,
+    &:hover {
+        color: #1B75BC;
+        outline: none;
+        background: fade-out(#1B75BC, .3);
+    }
 }
 
 .content-section {
@@ -559,13 +558,6 @@ a:hover {
     background: #1B75BC;
 }
 
-.btn-circle:focus,
-.btn-circle:hover {
-    color: white;
-    outline: none;
-    background: rgba(255, 255, 255, 0.1);
-}
-
 .content-section {
     padding-top: 50px;
     padding-bottom: 50px;
@@ -606,12 +598,26 @@ a:hover {
     background-color: transparent;
 }
 
-.btn-default:focus,
-.btn-default:hover {
+.btn-data {
     color: black;
+    border: 1px solid black;
+    background-color: transparent;
+}
+
+.btn-data:focus,
+.btn-data:hover {
+    color: #fff;
     border: 1px solid #fff;
     outline: none;
-    background-color: #fff;
+    background-color: #1B75BC;
+}
+
+.btn-default:focus,
+.btn-default:hover {
+    color: #fff;
+    border: 1px solid #fff;
+    outline: none;
+    background-color: #1B75BC;
 }
 
 ul.banner-social-buttons {
@@ -689,9 +695,13 @@ body {
 /* inject:scss */
 
 @import 'data/data';
+
 @import 'feedback/feedback';
+
 @import 'main/main';
+
 @import 'map/map';
+
 @import '../components/footer/footer';
 
 /* endinject */
