--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -9,7 +9,7 @@ $fa-font-path: '/assets/fonts/font-awesome/';
 .browserupgrade {
     margin: 0.2em 0;
     background: #ccc;
-    color: #000;
+    color: #343a40;
     padding: 0.2em 0;
 }
 
@@ -74,8 +74,9 @@ $fa-font-path: '/assets/fonts/font-awesome/';
     margin-bottom: 40px;
 }
 
-
-/* scss styles */
+.text-caps {
+    text-transform: capitalize !important;
+}
 
 
 /*!
@@ -89,7 +90,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
-    color: black;
+    color: #343a40;
     background-color: transparent;
 }
 
@@ -101,311 +102,20 @@ html {
 h1,
 h2,
 h3,
-h4,
+h4 {
+    font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    margin: 0 0 0;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+
 h5,
 h6 {
     font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 500;
     margin: 0 0 35px;
     letter-spacing: 1px;
-    text-transform: uppercase;
-}
-
-p {
-    font-size: 16px;
-    line-height: 1.5;
-    margin: 0 0 25px;
-}
-
-@media (min-width: 768px) {
-    p {
-        font-size: 18px;
-        line-height: 1.6;
-        margin: 0 0 35px;
-    }
-}
-
-a {
-    -webkit-transition: all 0.2s ease-in-out;
-    -moz-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-    color: #fff;
-}
-
-a:focus,
-a:hover {
-    text-decoration: none;
-    color: #1d9b6c;
-}
-
-#mainNav {
-    font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    margin-bottom: 0;
-    text-transform: uppercase;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-    background-color: #1B75BC;
-}
-
-#mainNav .navbar-toggler {
-    font-size: 14px;
-    padding: 11px;
-    color: white;
-    border: 1px solid white;
-}
-
-#mainNav .navbar-brand {
-    font-weight: 600;
-}
-
-#mainNav a {
-    color: white;
-}
-
-#mainNav .navbar-nav .nav-item {
-    -webkit-transition: background 0.3s ease-in-out;
-    -moz-transition: background 0.3s ease-in-out;
-    transition: background 0.3s ease-in-out;
-}
-
-#mainNav .navbar-nav .nav-item:hover {
-    color: fade(white, 80%);
-    outline: none;
-    background-color: #1B75BC;
-}
-
-#mainNav .navbar-nav .nav-item:active,
-#mainNav .navbar-nav .nav-item:focus {
-    outline: none;
-    background-color: #1B75BC;
-}
-
-@media (min-width: 992px) {
-    #mainNav {
-        padding-top: 20px;
-        padding-bottom: 20px;
-        -webkit-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-        -moz-transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-        transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s;
-        letter-spacing: 1px;
-        border-bottom: none;
-        background: #1B75BC;
-    }
-    #mainNav.navbar-shrink {
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
-        background: #1B75BC;
-    }
-    #mainNav .nav-link.active {
-        outline: none;
-        background-color: rgba(255, 255, 255, 0.3);
-    }
-    #mainNav .nav-link.active:hover {
-        color: white;
-    }
-}
-
-.masthead {
-    display: table;
-    width: 100%;
-    // height: 85vh !important;
-    padding: 200px 0;
-    text-align: center;
-    color: white;
-    background: url("/assets/images/intro-bg.jpg") no-repeat bottom center scroll;
-    background-color: #1B75BC;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-.masthead .intro-body {
-    display: table-cell;
-    vertical-align: middle;
-}
-
-.masthead .intro-body .brand-heading {
-    font-size: 50px;
-}
-
-.masthead .intro-body .intro-text {
-    font-size: 18px;
-}
-
-@media (min-width: 768px) {
-    .masthead {
-        height: 100%;
-        padding: 0;
-    }
-    .masthead .intro-body .brand-heading {
-        font-size: 100px;
-    }
-    .masthead .intro-body .intro-text {
-        font-size: 22px;
-    }
-}
-
-.btn-circle {
-    font-size: 26px;
-    width: 55px;
-    height: 55px;
-    margin-bottom: 0px;
-    line-height: 45px;
-    -webkit-transition: background 0.3s ease-in-out;
-    -moz-transition: background 0.3s ease-in-out;
-    transition: background 0.3s ease-in-out;
-    color: white;
-    border: 2px solid white;
-    border-radius: 100% !important;
-    background: #1B75BC;
-    &:focus,
-    &:hover {
-        color: #1B75BC;
-        outline: none;
-        background: fade-out(#1B75BC, .3);
-    }
-}
-
-.content-section {
-    padding-top: 100px;
-    padding-bottom: 100px;
-}
-
-.data-section {
-    background-color: #fff !important;
-}
-
-.download-section {
-    color: white;
-    background: url("/assets/images/downloads-bg.jpg") no-repeat center center scroll;
-    // background-color: #1B75BC;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-}
-
-@media (min-width: 992px) {
-    .content-section {
-        padding-top: 100px;
-        padding-bottom: 100px;
-    }
-}
-
-.btn {
-    font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 300;
-    -webkit-transition: all 0.3s ease-in-out;
-    -moz-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    text-transform: uppercase;
-    border-radius: 0;
-}
-
-.btn-default {
-    color: #fff;
-    border: 1px solid #fff;
-    background-color: #1B75BC;
-}
-
-.btn-default:focus,
-.btn-default:hover {
-    color: black;
-    border: 1px solid #fff;
-    outline: none;
-    background-color: #fff;
-}
-
-ul.banner-social-buttons {
-    margin-top: 0;
-}
-
-@media (max-width: 1199px) {
-    ul.banner-social-buttons {
-        margin-top: 15px;
-    }
-}
-
-@media (max-width: 767px) {
-    ul.banner-social-buttons li {
-        display: block;
-        margin-bottom: 20px;
-        padding: 0;
-    }
-    ul.banner-social-buttons li:last-child {
-        margin-bottom: 0;
-    }
-}
-
-footer {
-    padding: 10px 0;
-    p {
-        font-size: 14px;
-        margin: 0;
-        color: #fff !important;
-    }
-}
-
-::-moz-selection {
-    background: #fcfcfc;
-    background: rgba(255, 255, 255, 0.2);
-    text-shadow: none;
-}
-
-::selection {
-    background: #fcfcfc;
-    background: rgba(255, 255, 255, 0.2);
-    text-shadow: none;
-}
-
-img::selection {
-    background: transparent;
-}
-
-img::-moz-selection {
-    background: transparent;
-}
-
-body {
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
-}
-
-
-/* End of scss styles */
-
-
-/*!
- * Start Bootstrap - Grayscale v4.0.0-beta.2 (https://startbootstrap.com/template-overviews/grayscale)
- * Copyright 2013-2017 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
- */
-
-body {
-    font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    position: relative;
-    width: 100%;
-    height: 100%;
-    // color: black;
-    // background-color: #fff;
-}
-
-html {
-    width: 100%;
-    height: 100%;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-weight: 500;
-    margin: 0 0 35px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
 }
 
 p {
@@ -547,7 +257,7 @@ a:hover {
     font-size: 26px;
     width: 55px;
     height: 55px;
-    margin-top: 15px;
+    margin-bottom: 0px;
     line-height: 45px;
     -webkit-transition: background 0.3s ease-in-out;
     -moz-transition: background 0.3s ease-in-out;
@@ -556,16 +266,35 @@ a:hover {
     border: 2px solid white;
     border-radius: 100% !important;
     background: #1B75BC;
+    &:focus,
+    &:hover {
+        color: #1B75BC;
+        outline: none;
+        background: fade-out(#1B75BC, .3);
+    }
 }
 
-.content-section {
+.banner-section {
     padding-top: 50px;
     padding-bottom: 50px;
     background-color: #1B75BC;
     color: #fff;
 }
 
+.data-section {
+    background-color: #fff !important;
+}
+
+.content-section {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #fff;
+    color: #343a40;
+}
+
 .download-section {
+    padding-top: 100px;
+    padding-bottom: 100px;
     color: white;
     background: url("/assets/images/downloads-bg.jpg") no-repeat center center scroll;
     background-color: #1B75BC;
@@ -576,7 +305,17 @@ a:hover {
 }
 
 @media (min-width: 992px) {
+    .banner-section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+    }
     .content-section {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        background-color: #fff;
+        color: #343a40;
+    }
+    .download-section {
         padding-top: 100px;
         padding-bottom: 100px;
     }
@@ -599,8 +338,8 @@ a:hover {
 }
 
 .btn-data {
-    color: black;
-    border: 1px solid black;
+    color: #343a40;
+    border: 1px solid #343a40;
     background-color: transparent;
 }
 
@@ -620,6 +359,13 @@ a:hover {
     background-color: #1B75BC;
 }
 
+// .btn-default:focus,
+// .btn-default:hover {
+//     color: #343a40;
+//     border: 1px solid #fff;
+//     outline: none;
+//     background-color: #fff;
+// }
 ul.banner-social-buttons {
     margin-top: 0;
 }
@@ -701,6 +447,8 @@ body {
 @import 'main/main';
 
 @import 'map/map';
+
+@import 'tableau/tableauViz';
 
 @import '../components/footer/footer';
 
