Updates to Site Footer

--- a/client/components/footer/footer.html
+++ b/client/components/footer/footer.html
@@ -1,4 +1,4 @@
-<div class="container text-center">
+<!-- <div class="container text-center">
     <div class="container text-center">
         <p class="font-weight-light">
             <a href="http://abag.ca.gov">Copyright &copy; Association of Bay Area Governments</a> |
@@ -8,4 +8,145 @@
             <a href="https://github.com/BayAreaMetro/projections/issues?state=open">Issues</a>
         </p>
     </div>
+</div> -->
+<div class="container">
+    <div class="row mt-4">
+        <div class="col-md-3">
+            <div class="footer-col-inner">
+                <div class="region region-footer">
+                    <!-- <div id="block-on-the-web-0" class="block block-on-the-web block--none">
+
+                        <div class="content">
+                            <span class="on-the-web otw-twitter"><a href="https://twitter.com/PlanBayArea" title="Find Plan Bay Area on Twitter" rel="nofollow" target="_blank" class="fa fa-2x fa-twitter-square ext">twitter<span class="ext"><span class="element-invisible"> (link is external)</span></span>
+                            </a>
+                            </span><span class="on-the-web otw-facebook"><a href="https://www.facebook.com/PlanBayArea" title="Find Plan Bay Area on Facebook" rel="nofollow" target="_blank" class="fa fa-2x fa-facebook-square ext">facebook<span class="ext"><span class="element-invisible"> (link is external)</span></span>
+                            </a>
+                            </span><span class="on-the-web otw-instagram"><a href="https://www.instagram.com/planbayarea/" title="Find Plan Bay Area on Instagram" rel="nofollow" target="_blank" class="fa fa-2x fa-instagram ext">instagram<span class="ext"><span class="element-invisible"> (link is external)</span></span>
+                            </a>
+                            </span>
+                        </div>
+                    </div> -->
+                    <div id="block-block-1" class="block block-block block--none">
+
+                        <div class="content">
+                            <h5><a href="/contact-us">Contact Us</a></h5>
+
+                            <ul class="menu nav nav-pills nav-stacked">
+                                <li class="first leaf menu-mlid-7381 menu-link-final-plan-bay-area-document">Email: <a href="mailto:info@PlanBayArea.org" class="mailto">info@PlanBayArea.org<span class="mailto"><span class="element-invisible"> (link sends e-mail)</span></span></a></li>
+                                <li>Phone: (415) 778-6757</li>
+                                <li>Fax: (415) 536-9800</li>
+                                <li><a href="/contact-us/congestion-management-agencies" class="border-bottom">Congestion Management Agencies</a></li>
+                            </ul>
+                            <p class="contact mt-3"><a href="/your-part/get-involved/request-accessibility-assistance">Request accessibility assistance</a></p>
+
+                            <p class="contact"><a href="/sitemap">Site Map</a></p>
+
+                            <p class="contact"><a href="/privacy-policy">Privacy Policy</a> | <a href="/terms-use">Terms of Use</a></p>
+
+                            <p class="contact">© 2017 Association of Bay Area Governments and Metropolitan Transportation Commission. All Rights Reserved.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="footer-col-inner">
+                <div class="footer-menu-section footer-nmenu-4831">
+                    <h5><a href="/plan">2040 Plan</a></h5>
+                    <div class="menu-block-wrapper menu-block-menu-foot menu-name-main-menu parent-mlid-4831 menu-level-1">
+                        <ul class="menu nav nav-pills nav-stacked">
+                            <li class="first leaf menu-mlid-7336 menu-link-final-plan-bay-area-2040"><a href="http://2040.planbayarea.org" title="">Final Plan Bay Area 2040</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-7306 menu-link-access-the-plan"><a href="/2040-plan/access-plan">Access the Plan</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4836 menu-link-the-context"><a href="/2040-plan/context">The Context</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4841 menu-link-timeline"><a href="/2040-plan/timeline">TImeline</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-4846 menu-link-plan-details"><a href="/2040-plan/plan-details">Plan Details</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-6401 menu-link-final-preferred-scenario"><a href="/2040-plan/final-preferred-scenario">Final Preferred Scenario</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-7386 menu-link-environmental-impact-report"><a href="/2040-plan/environmental-impact-report">Environmental Impact Report</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="last leaf has-children menu-mlid-4921 menu-link-quick-facts"><a href="/2040-plan/quick-facts">Quick Facts</a><a class="dropdown-icon">&nbsp;</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-menu-section footer-nmenu-4906">
+                    <h5><a href="/previous-plan">Previous Plan</a></h5>
+                    <div class="menu-block-wrapper menu-block-menu-foot menu-name-main-menu parent-mlid-4906 menu-level-1">
+                        <ul class="menu nav nav-pills nav-stacked">
+                            <li class="first leaf menu-mlid-7381 menu-link-final-plan-bay-area-document"><a href="http://www.planbayarea.org/previous-plan" title="">Final Plan Bay Area Document</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4911 menu-link-supplementary-reports-and-additional-resources"><a href="http://www.planbayarea.org/previous-plan/final-supplementary-reports-and-additional-resources">Supplementary Reports and Additional Resources</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="last leaf menu-mlid-4916 menu-link-document-archive-plan-bay-area-2013"><a href="http://www.planbayarea.org/previous-plan/document-archive-plan-bay-area-2013">Document Archive: Plan Bay Area 2013</a><a class="dropdown-icon">&nbsp;</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="footer-col-inner">
+                <div class="footer-menu-section footer-nmenu-4851">
+                    <h5><a href="/get-involved">Get Involved</a></h5>
+                    <div class="menu-block-wrapper menu-block-menu-foot menu-name-main-menu parent-mlid-4851 menu-level-1">
+                        <ul class="menu nav nav-pills nav-stacked">
+                            <li class="first leaf menu-mlid-6386 menu-link-public-participation-plan"><a href="http://www.planbayarea.org/get-involved/public-participation-plan">Public Participation Plan</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-6301 menu-link-mailing-list"><a href="http://www.planbayarea.org/your-part/mailing-list">Mailing List</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4941 menu-link-language-assistance"><a href="http://www.planbayarea.org/get-involved/language-assistance">Language Assistance</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4946 menu-link-meetings-and-events"><a href="http://www.planbayarea.org/get-involved/meetings-and-events">Meetings and Events</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-4951 menu-link-open-house-and-meeting-materials"><a href="http://www.planbayarea.org/get-involved/open-house-and-meeting-materials">Open House and Meeting Materials</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4956 menu-link-plan-bay-area-open-forum"><a href="http://www.planbayarea.org/your-part/plan-bay-area-open-forum">Plan Bay Area Open Forum</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="last leaf has-children menu-mlid-4961 menu-link-your-comments"><a href="http://www.planbayarea.org/get-involved/your-comments">Your Comments</a><a class="dropdown-icon">&nbsp;</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-menu-section footer-nmenu-4856">
+                    <h5><a href="/counties">The Counties</a></h5>
+                    <div class="menu-block-wrapper menu-block-menu-foot menu-name-main-menu parent-mlid-4856 menu-level-1">
+                        <ul class="menu nav nav-pills nav-stacked">
+                            <li class="first leaf has-children menu-mlid-5026 menu-link-alameda-county"><a href="http://www.planbayarea.org/counties/focus-alameda-county">Alameda County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5036 menu-link-contra-costa-county"><a href="http://www.planbayarea.org/counties/focus-contra-costa-county">Contra Costa County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5041 menu-link-marin-county"><a href="http://www.planbayarea.org/counties/focus-marin-county">Marin County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5046 menu-link-napa-county"><a href="http://www.planbayarea.org/counties/focus-napa-county">Napa County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5051 menu-link-san-francisco-county"><a href="http://www.planbayarea.org/counties/focus-san-francisco-county">San Francisco County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5056 menu-link-san-mateo-county"><a href="http://www.planbayarea.org/counties/focus-san-mateo-county">San Mateo County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5061 menu-link-santa-clara-county"><a href="http://www.planbayarea.org/counties/focus-santa-clara-county">Santa Clara County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5066 menu-link-solano-county"><a href="http://www.planbayarea.org/counties/focus-solano-county">Solano County</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="last leaf has-children menu-mlid-5071 menu-link-sonoma-county"><a href="http://www.planbayarea.org/counties/focus-sonoma-county">Sonoma County</a><a class="dropdown-icon">&nbsp;</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col-md-3">
+            <div class="footer-col-inner">
+                <div class="footer-menu-section footer-nmenu-4106">
+                    <h5><a href="http://www.planbayarea.org/news" title="Plan Bay Area News">News</a></h5>
+                    <div class="menu-block-wrapper menu-block-menu-foot menu-name-main-menu parent-mlid-4106 menu-level-1">
+                        <ul class="menu nav nav-pills nav-stacked">
+                            <li class="first leaf menu-mlid-4511 menu-link-news-features"><a href="http://www.planbayarea.org/news/features" title="">News Features</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4501 menu-link-news-releases"><a href="http://www.planbayarea.org/news/releases" title="">News Releases</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4496 menu-link-news-headlines"><a href="http://www.planbayarea.org/news/headlines" title="">News Headlines</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4521 menu-link-e-newsletters"><a href="http://www.planbayarea.org/news/newsletters" title="">E-Newsletters</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4506 menu-link-video-gallery"><a href="http://www.planbayarea.org/news/videos" title="">Video Gallery</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="last leaf menu-mlid-7761 menu-link-photo-gallery"><a href="http://www.planbayarea.org/news/photo-gallery" title="">Photo Gallery</a><a class="dropdown-icon">&nbsp;</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-menu-section footer-nmenu-4861">
+                    <h5><a href="http://www.planbayarea.org/resources">Resources</a></h5>
+                    <div class="menu-block-wrapper menu-block-menu-foot menu-name-main-menu parent-mlid-4861 menu-level-1">
+                        <ul class="menu nav nav-pills nav-stacked">
+                            <li class="first leaf menu-mlid-4981 menu-link-vital-signs"><a href="http://www.vitalsigns.mtc.ca.gov/" title="" class="ext">Vital Signs</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-7376 menu-link-project-list"><a href="http://projects.planbayarea.org/" title="Project List">Project List</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-4976 menu-link-ceqa-streamlining-opportunities"><a href="http://www.planbayarea.org/resources/ceqa-streamlining-opportunities">CEQA Streamlining Opportunities</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4996 menu-link-bay-area-travel-map"><a href="http://www.planbayarea.org/resources/bay-area-travel-map" title="">Bay Area Travel Map</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf has-children menu-mlid-5001 menu-link-bay-area-prosperity-plan"><a href="http://www.planbayarea.org/resources/bay-area-prosperity-plan">Bay Area Prosperity Plan</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="leaf menu-mlid-4991 menu-link-state-of-the-region-2015-report"><a href="http://reports.abag.ca.gov/sotr/2015/index.php" title="" class="ext">State of the Region 2015 Report</a><a class="dropdown-icon">&nbsp;</a></li>
+                            <li class="last leaf menu-mlid-5021 menu-link-pda-assessment-update"><a href="http://mtccms03dev.prod.acquia-sites.com/sites/default/files/pdf/PDA_Assessment_Update_Final.pdf" title="" class="ext">PDA Assessment Update</a><a class="dropdown-icon">&nbsp;</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="footer-menu-section footer-nmenu-1091">
+                    <h5><a href="/" title="" class="active">Home</a></h5>
+                </div> <small class="pull-right contact mb-4"><a href="#page-top">Back to Top</a></small>
+
+            </div>
+        </div>
+    </div>
+
 </div>
