--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -85,18 +85,38 @@ $fa-font-path: '/assets/fonts/font-awesome/';
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-grayscale/blob/master/LICENSE)
  */
 
-body {
-    font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    position: relative;
+$height-footer: 400px;
+html {
+    min-height: 100%;
+    position: absolute;
     width: 100%;
     height: 100%;
-    color: #343a40;
-    background-color: transparent;
+    body {
+        //margin-bottom: $height-footer;
+        font-family: 'Cabin', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+        position: relative;
+        width: 100%;
+        min-height: calc(100vh-$height-footer);
+        color: #343a40;
+        background-color: transparent;
+        -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
+    }
+    footer {
+        // bottom: 0;
+        // right: 0;
+        // left: 0;
+        position: relative;
+        height: $height-footer;
+        //background-color: #f5f5f5;
+        padding: 10px 0;
+        color: #fff;
+        background-color: #1B75BC;
+    }
 }
 
-html {
-    width: 100%;
-    height: 100%;
+footer p {
+    font-size: 12px;
+    margin: 0;
 }
 
 h1,
@@ -122,6 +142,19 @@ p {
     font-size: 16px;
     line-height: 1.5;
     margin: 0 0 25px;
+    letter-spacing: 0.0625em;
+}
+
+.mh {
+    height: 100vh;
+}
+
+.mapView {
+    position: absolute;
+    top: 80px;
+    // bottom: $height-footer;
+    width: 100%;
+    height: 100vh;
 }
 
 @media (min-width: 768px) {
@@ -387,22 +420,6 @@ ul.banner-social-buttons {
     }
 }
 
-footer {
-    padding: 10px 0;
-    background-color: #1B75BC;
-    color: #fff;
-}
-
-footer p {
-    font-size: 12px;
-    margin: 0;
-}
-
-p {
-    /* 16 * 0.0625 = 1px */
-    letter-spacing: 0.0625em;
-}
-
 ::-moz-selection {
     background: #fcfcfc;
     background: rgba(255, 255, 255, 0.2);
@@ -423,10 +440,6 @@ img::-moz-selection {
     background: transparent;
 }
 
-body {
-    -webkit-tap-highlight-color: rgba(255, 255, 255, 0.2);
-}
-
 
 /* Responsive: Portrait tablets and up */
 
@@ -441,15 +454,10 @@ body {
 /* inject:scss */
 
 @import 'data/data';
-
 @import 'feedback/feedback';
-
 @import 'main/main';
-
 @import 'map/map';
-
 @import 'tableau/tableauViz';
-
 @import '../components/footer/footer';
 
 /* endinject */
