--- a/client/components/navbar/navbar.html
+++ b/client/components/navbar/navbar.html
@@ -36,6 +36,9 @@
                     <a class="nav-link" ui-sref="data">Data</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" ui-sref="map">Map</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link js-scroll-trigger" href="/#download">Download</a>
                 </li>
                 <li class="nav-item">
