--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -152,8 +152,10 @@ p {
 .mapView {
     position: absolute;
     top: 80px;
-    // bottom: $height-footer;
-    width: 100%;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    //width: 100%;
     height: 100vh;
 }
 
@@ -454,10 +456,15 @@ img::-moz-selection {
 /* inject:scss */
 
 @import 'data/data';
+
 @import 'feedback/feedback';
+
 @import 'main/main';
+
 @import 'map/map';
+
 @import 'tableau/tableauViz';
+
 @import '../components/footer/footer';
 
 /* endinject */
