--- a/client/app/app.scss
+++ b/client/app/app.scss
@@ -1,5 +1,5 @@
-$fa-font-path: '/assets/fonts/font-awesome/';
-@import '~font-awesome/scss/font-awesome';
+$fa-font-path: '/assets/fonts/font-awesome';
+//@import '~font-awesome/scss/font-awesome';
 // @import url(http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,900|Roboto:300,500,700,900);
 
 /**
@@ -151,12 +151,18 @@ p {
 
 .mapView {
     position: absolute;
+    overflow: hidden !important;
     top: 80px;
-    bottom: 0;
+    bottom: 400px;
     right: 0;
     left: 0;
-    //width: 100%;
-    height: 100vh;
+    // width: 100%;
+    // height: 100vh;
+}
+
+.mapboxgl-map {
+    position: absolute;
+    overflow: hidden !important;
 }
 
 @media (min-width: 768px) {
@@ -554,6 +560,7 @@ img::-moz-selection {
 
 .btnSelect {
     text-transform: none !important;
+    letter-spacing: 1px;
 }
 
 .btn-app {
@@ -584,10 +591,15 @@ img::-moz-selection {
 /* inject:scss */
 
 @import 'data/data';
+
 @import 'feedback/feedback';
+
 @import 'main/main';
+
 @import 'map/map';
+
 @import 'tableau/tableauViz';
+
 @import '../components/footer/footer';
 
 /* endinject */
